# ST-Ctrl

./: CHANGELOG-v1.0.1.txt  CHANGELOG.md  README.md
backups/v1.0.0.7/: AndroidManifest.xml  AppUpdateChecker.kt  AutoBackupScreen.kt  AutoBackupWorker.kt  BackupManager.kt  BackupScreen.kt  BootReceiver.kt  CHANGELOG.md  ClearCacheScreen.kt  ConfirmDialog.kt  ConsoleNavHost.kt  ConsoleScreen.kt  ConsoleTopBar.kt  ConsoleViewModel.kt  CoreUpdateScreen.kt  CoreUpdater.kt  DeviceDetector.kt  ExtensionsHubScreen.kt  ExtensionsScreen.kt  FileManager.kt  FileManagerScreen.kt  KeepAliveMonitor.kt  MainActivity.kt  NodeState.kt  RestoreScreen.kt  RoundedProgressBar.kt  ServerStatusScreen.kt  StorageScreen.kt  TavernApplication.kt  TavernForegroundService.kt  TavernWebView.kt  ThemeState.kt  UpdateChecker.kt  node-bridge.cpp  restore.py  st-migrate.sh
backups/v1.0.0.8/: AndroidManifest.xml  AutoBackupScreen.kt  BackupManager.kt  BackupMetadata.kt  BatteryHelper.kt  CHANGELOG.md  ClearCacheScreen.kt  ConsoleScreen.kt  ConsoleTopBar.kt  ConsoleViewModel.kt  CoreUpdateScreen.kt  CoreUpdater.kt  DownloadTask.kt  ExtensionsScreen.kt  FileManagerScreen.kt  MainActivity.kt  NodeRunner.kt  RestoreScreen.kt  ServerStatusScreen.kt  SettingsScreen.kt  SettingsState.kt  TavernWebView.kt  app-build.gradle.kts  app-root-build.gradle.kts  node-bridge.cpp
tavern-app/app/: build.gradle.kts  proguard-rules.pro
tavern-app/app/src/main/: AndroidManifest.xml
tavern-app/app/src/main/assets/: st-migrate.sh
tavern-app/app/src/main/cpp/: CMakeLists.txt  node-bridge.cpp
(+18 files in other folders)
